--- a/JAVA/细碎.md
+++ b/JAVA/细碎.md
@@ -6,29 +6,69 @@
   <version>3.8.1</version>  
   <scope>test</scope>  
 </dependency>  
+
+<!--springframework-->
+<dependency>  
+  <groupId>org.springframework</groupId>  
+  <artifactId>spring-webmvc</artifactId>  
+  <version>5.2.10.RELEASE</version>  
+</dependency>  
   
+<dependency>  
+  <groupId>org.springframework</groupId>  
+  <artifactId>spring-jdbc</artifactId>  
+  <version>5.2.10.RELEASE</version>  
+</dependency>  
+  
+<dependency>  
+  <groupId>org.springframework</groupId>  
+  <artifactId>spring-test</artifactId>  
+  <version>5.2.10.RELEASE</version>  
+</dependency>
+
+<!--mybatis-->
 <dependency>  
   <groupId>org.mybatis</groupId>  
   <artifactId>mybatis</artifactId>  
   <version>3.5.5</version>  
 </dependency>  
-  
+
+<dependency>  
+  <groupId>org.mybatis</groupId>  
+  <artifactId>mybatis-spring</artifactId>  
+  <version>1.3.0</version>  
+</dependency>
+
+  <!--mysql-->
 <dependency>  
   <groupId>mysql</groupId>  
   <artifactId>mysql-connector-java</artifactId>  
   <version>8.0.33</version>  
 </dependency>  
   
-  
+<!--servlet-->
 <dependency>  
   <groupId>javax.servlet</groupId>  
   <artifactId>javax.servlet-api</artifactId>  
   <version>3.1.0</version>  
   <scope>provided</scope>  
 </dependency>  
-  
+
+<!--druid-->
+<dependency>
+  <groupId>com.alibaba</groupId>
+  <artifactId>druid</artifactId>
+  <version>1.1.16</version>
+</dependency>
+
+<!--json-->
+<dependency>  
+  <groupId>com.fasterxml.jackson.core</groupId>  
+  <artifactId>jackson-databind</artifactId>  
+  <version>2.18.2</version>  
+</dependency>
+
 <!--jsp-->  
-  
 <dependency>  
   <groupId>javax.servlet.jsp</groupId>  
   <artifactId>jsp-api</artifactId>  
@@ -49,6 +89,7 @@
   <version>1.1.2</version>  
 </dependency>
 
+<!--tomcat-->
 <plugins>  
 	<plugin>    
 		<groupId>org.opoo.maven</groupId>  
@@ -63,3 +104,29 @@
 3. 终止进程：taskkill /PID 1234 /F
 ### 创建resources中的目录结构 用/
 - com/aytoame/mapper：com.zytoame.mapper文件夹。就是resources文件夹下面的com文件夹中的aytoame文件夹中的mapper文件夹
+### 错误中出现< init>，表示没有构造方法
+### java.sql.SQLException: Field 'id' doesn't have a default value
+数据库中id字段设置为自增
+### 数据库内容为null
+ **后端未正确接收 JSON 数据**：Spring MVC 控制器可能没有使用 `@RequestBody` 注解来接收 JSON 数据。
+ 在页面按下f12查看调试的错误：console.log(row)；打印信息进行调试
+### 前端在调用 `row.id` 时得到 `undefined`，而实际数据存储在 `row.byId` 中
+ #### **后端 `Book` 类的 getter 方法命名不规范**
+在 `Book.java` 中，你定义了一个 **`getById()`** 方法，而不是标准的 **`getId()`**：
+```java
+public class Book {
+    private int id;
+    // ❌ 非标准命名，会导致 JSON 序列化字段名为 "byId"
+    public int getById() {
+        return id;
+    }
+    // ✅ 应该改为标准命名
+    public int getId() {
+        return id;
+    }
+}
+```
+- **原因**：  
+    Spring MVC 默认使用 **Jackson** 库序列化对象为 JSON，字段名由 getter 方法名决定（去掉 `get` 并首字母小写）。
+    - `getById()` → 字段名 `byId`
+    - `getId()` → 字段名 `id`
