--- a/JAVA/点评.md
+++ b/JAVA/点评.md
@@ -1,19 +1,123 @@
 ## Redis
+### redis指令
 进入redis安装目录：cd /usr/local/src/redis-7.2.6
 **以 `redis` 用户运行 Redis**（推荐）：sudo -u redis redis-server redis.conf
 编辑 `redis.conf`：sudo nano redis.conf
-/var/log/redis/redis.log
+
 看redis在后台有没有运行：ps -ef | grep redis
 
 Redis 服务是以 `redis` 用户身份运行的（PID 为 941），而你尝试用普通用户 (`a`) 执行 `kill -9 941` 时被系统拒绝（**不允许的操作**）。这是因为：
-
 > **Linux 权限规则**：普通用户只能终止自己启动的进程，无法终止其他用户的进程（如 `redis` 用户运行的进程）。
 
- 使用 `sudo` 强制终止（推荐）
-sudo kill -9 941
+ 使用 `sudo` 强制终止：sudo kill -9 941
 
+```
 redis-cli
 127.0.0.1:6379> AUTH yourpassword  # 手动输入密码
 OK
 127.0.0.1:6379> PING
 PONG
+```
+
+### 常见命令:
+1. 键操作
+	查看所有键：keys *
+	删除键：del mykey
+	设置键过期时间：expire mykey 60
+	检查键是否存在：exists mykey
+
+2. 字符串操作
+	设置键值set mykey "Hello, Redis!"
+	获取键值get mykey
+	增加数值incr mycounter
+	批量设置多个键值mset key1 "value1" key2 "value2"
+	● SET:添加或者修改已经存在的一个String类型的键值对
+	● GET:根据key获取String类型的value
+	● MSET:批量添加多个String类型的键值对
+	● MGET:根据多个key获取多个String类型的value
+	● INCR:让一个整型的key自增1
+	● INCRBY:让一个整型的key自增并指定步长,例如:incrby num 2让num值自增2
+	● INCRBYFLOAT:让一个浮点类型的数字自增并指定步长
+	● SETNX:添加一个String类型的键值对,前提是这个key不存在,否则不执行
+	● SETEX:添加一个String类型的键值对,并且指定有效期
+
+3. 列表操作
+	从左侧插入元素lpush mylist "item1"
+	获取列表长度llen mylist
+	获取整个队列的元素lrange mylist 0 -1
+	从右侧弹出元素并返回rpop mylist
+	使用loop模拟阻塞队列1. bloop user 100，（超时时间）如果队列为空则等待100s）。2. lpush 键入值，bloop获取产生输出，停止搜索
+
+4. 集合操作
+	添加元素到集合sadd myset "member1"
+	获取集合中的所有成员smembers myset
+	 检查成员是否存在于集合中sismember myset "member1"
+	获取两个集合的交集sinter set1 set2
+	● SADD key member ...: 向set中添加一个或多个元素
+	● SREM key member ...: 移除set中的指定元素
+	● SCARD key:返回set中元素的个数
+	● SISMEMBER key member:判断一个元素是否存在于set中
+	● SMEMBERS:获取set中的所有元素
+	● SINTER key1 key2 ..: 求key1与key2的交集
+	● SDIFF key1 key2 ..: 求key1与key2的差集
+	● SUNION key1 key2 ..: 求key1和key2的并集
+
+5. 哈希操作
+	设置哈希字段值hset myhash field1 "value1"
+	获取哈希字段值hget myhash field1
+	获取所有字段和值hgetall myhash
+	 删除哈希字段hdel myhash field1
+	 批量添加多个hash类型key的field值HMSET，获取HMGET
+	 获取一个hash类型的key中所有的field：HKEYS
+	 获取一个hash类型的key中所有的value：HVALS
+	 key字段自增并指定步长：HINCRBY
+
+6. 有序集合操作sortedset
+	添加成员及其分数到有序集合zadd myzset 1 "member1"
+	获取指定范围内的成员（按分数排序）zrange myzset 0 -1 withscores
+	删除成员zrem myzset "member1"
+	● ZADD key score member:添加一个或多个元素到sorted set,如果已经存在则更新其score值
+	● ZREM key member:删除sorted set中的一个指定元素
+	● ZSCORE key member:获取sorted set中的指定元素的score值
+	● ZRANK key member:获取sorted set中的指定元素的排名
+	● ZCARD key:获取sorted set中的元素个数
+	● ZCOUNT key min max:统计score值在给定范围内的所有元素的个数
+	● ZINCRBY key increment member:让sorted set中的指定元素自增,步长为指定的increment值
+	● ZRANGE key min max:按照score排序后,获取指定排名范围内的元素
+	● ZRANGEBYSCORE key min max:按照score排序后,获取指定score范围内的元素
+	● ZDIFF、ZINTER、ZUNION:求差集、交集、并集
+	
+|特性|栈(Stack)实现|队列(Queue)实现|
+|---|---|---|
+|入操作命令|`LPUSH`|`RPUSH`|
+|出操作命令|`LPOP`|`LPOP`|
+|顺序|后进先出(LIFO)|先进先出(FIFO)|
+|典型应用|撤销操作、函数调用栈|任务队列、消息处理|
+
+redis可能出现的问题：big key问题，分页，排序，oom
+
+## 短信登录验证
+1. 登录有效期问题，
+	1. 需求：用户操作时一直保持登录状态。
+	2. 问题：用户使用时也会在ttl时间之后断开登录。
+	3. 解决
+		拦截器1：拦截所有，（包括未登录时可以使用的页面和操作）
+		拦截器2：拦截登录状态，
+2. 手机格式错误之后，验证码发送按钮依旧设置60s后重发，没有进行重置
+	1. 需求：报出手机格式错误之后，可以缓冲几秒之后，验证码按钮进行重置
+
+## 商户查询缓存
+### 缓存
+1. 作用：降低后端负载；提高读写效率，降低响应时间
+2. 成本：数据一致性成本，代码维护成本，运维成本（击穿、雪崩、代码复杂度）
+## 优惠券秒杀
+## 分布式锁
+## 秒杀优化
+## 消息队列
+## 达人探店
+## 好友关注
+## 附近商铺
+## 用户签到
+## UV统计
+## 分布式缓存
+## 多级缓存
