--- a/JAVA/细碎.md
+++ b/JAVA/细碎.md
@@ -130,3 +130,16 @@ public class Book {
     Spring MVC 默认使用 **Jackson** 库序列化对象为 JSON，字段名由 getter 方法名决定（去掉 `get` 并首字母小写）。
     - `getById()` → 字段名 `byId`
     - `getId()` → 字段名 `id`
+
+### `private final StringRedisTemplate stringRedisTemplate;`（构造器注入）和 `@Resource private StringRedisTemplate stringRedisTemplate;`（字段注入）
+
+| **特性**         | **构造器注入 (final字段)**                  | **@Resource字段注入** |
+| -------------- | ------------------------------------ | ----------------- |
+| **注入方式**       | 通过构造器参数强制传入                          | Spring通过反射直接设置字段  |
+| **不可变性**       | 支持`final`（线程安全）                      | 不能声明为`final`      |
+| **依赖明确性**      | 类依赖关系清晰可见                            | 依赖关系隐藏在类内部        |
+| **空值检查**       | 天然防止NPE（构造器强制要求）                     | 可能因配置错误导致NPE      |
+| **循环依赖**       | 能暴露设计问题（Spring会报错）                   | 能自动处理（但可能掩盖设计缺陷）  |
+| **测试友好性**      | 易于mock（直接传参）                         | 需要反射或Spring上下文    |
+| **Spring版本支持** | 所有版本                                 | 需要Spring 2.5+     |
+| **推荐程度**       | **官方推荐**（Spring 4.3+可省略`@Autowired`） | 逐步被淘汰（存在设计缺陷）     |
