--- a/JAVA/细碎.md
+++ b/JAVA/细碎.md
@@ -131,15 +131,163 @@ public class Book {
     - `getById()` → 字段名 `byId`
     - `getId()` → 字段名 `id`
 
-### `private final StringRedisTemplate stringRedisTemplate;`（构造器注入）和 `@Resource private StringRedisTemplate stringRedisTemplate;`（字段注入）
+### (构造器注入）和 （字段注入）
 
-| **特性**         | **构造器注入 (final字段)**                  | **@Resource字段注入** |
-| -------------- | ------------------------------------ | ----------------- |
-| **注入方式**       | 通过构造器参数强制传入                          | Spring通过反射直接设置字段  |
-| **不可变性**       | 支持`final`（线程安全）                      | 不能声明为`final`      |
-| **依赖明确性**      | 类依赖关系清晰可见                            | 依赖关系隐藏在类内部        |
-| **空值检查**       | 天然防止NPE（构造器强制要求）                     | 可能因配置错误导致NPE      |
-| **循环依赖**       | 能暴露设计问题（Spring会报错）                   | 能自动处理（但可能掩盖设计缺陷）  |
-| **测试友好性**      | 易于mock（直接传参）                         | 需要反射或Spring上下文    |
-| **Spring版本支持** | 所有版本                                 | 需要Spring 2.5+     |
-| **推荐程度**       | **官方推荐**（Spring 4.3+可省略`@Autowired`） | 逐步被淘汰（存在设计缺陷）     |
+| **特性**         | **构造器注入 (final字段)**<br>`private final StringRedisTemplate stringRedisTemplate;` | **@Resource字段注入**<br>`@Resource private StringRedisTemplate stringRedisTemplate;` |
+| -------------- | ------------------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
+| **注入方式**       | 通过构造器参数强制传入                                                                     | Spring通过反射直接设置字段                                                                  |
+| **不可变性**       | 支持`final`（线程安全）                                                                 | 不能声明为`final`                                                                      |
+| **依赖明确性**      | 类依赖关系清晰可见                                                                       | 依赖关系隐藏在类内部                                                                        |
+| **空值检查**       | 天然防止NPE（构造器强制要求）                                                                | 可能因配置错误导致NPE                                                                      |
+| **循环依赖**       | 能暴露设计问题（Spring会报错）                                                              | 能自动处理（但可能掩盖设计缺陷）                                                                  |
+| **测试友好性**      | 易于mock（直接传参）                                                                    | 需要反射或Spring上下文                                                                    |
+| **Spring版本支持** | 所有版本                                                                            | 需要Spring 2.5+                                                                     |
+| **推荐程度**       | **官方推荐**（Spring 4.3+可省略`@Autowired`）                                            | 逐步被淘汰（存在设计缺陷）                                                                     |
+### 逻辑处理的异步缓存重建
+#### 1. **`CompletableFuture.runAsync` 解析**
+
+##### 📌 **代码结构**
+
+```java
+CompletableFuture.runAsync(() -> {
+    try {
+        rebuildCache(id); // 重建缓存
+    } finally {
+        unlock(lockKey); // 确保锁释放
+    }
+}, executor); // 指定线程池
+```
+
+##### 🔍 **核心特性**
+
+|特性|说明|
+|---|---|
+|**异步执行**|通过 `CompletableFuture` 实现非阻塞异步任务|
+|**线程池控制**|显式指定 `executor` 避免占用默认 `ForkJoinPool`|
+|**异常处理**|在 `try-finally` 中保证锁释放，但异常需通过 `exceptionally` 捕获|
+|**链式操作**|支持后续调用 `.thenRun()`、`.exceptionally()` 等组合操作|
+
+##### ⚠️ **注意事项**
+
+- 若 `rebuildCache` 抛出异常，需额外调用 `.exceptionally()` 处理，否则异常会被静默吞噬。
+    
+- 默认使用 `ForkJoinPool.commonPool()`（未指定 `executor` 时），高并发场景可能造成资源竞争。
+    
+
+---
+
+#### 2. **`CACHE_REBUILD_EXECUTOR.submit` 解析**
+
+##### 📌 **代码结构**
+
+```java
+CACHE_REBUILD_EXECUTOR.submit(() -> {
+    try {
+        this.saveShop2Redis(id, 20L); // 重建缓存
+    } catch (Exception e) {
+        throw new RuntimeException(e); // 显式抛出异常
+    } finally {
+        unlock(lockKey); // 确保锁释放
+    }
+});
+```
+
+##### 🔍 **核心特性**
+
+|特性|说明|
+|---|---|
+|**基于线程池**|直接使用自定义的 `ExecutorService`（如 `ThreadPoolExecutor`）|
+|**异常处理**|通过 `try-catch` 捕获异常并转为 `RuntimeException`，避免静默失败|
+|**任务管理**|返回 `Future<?>` 可取消任务或检查状态（但此处未接收返回值）|
+
+##### ⚠️ **注意事项**
+
+- 抛出异常会导致线程池任务终止，需确保线程池配置了合理的 `RejectedExecutionHandler`。
+    
+- 未处理 `Future` 返回值时，任务中的异常可能被忽略（需通过线程池的 `UncaughtExceptionHandler` 捕获）。
+    
+
+---
+
+#### 3. **关键对比**
+
+|**对比维度**|**`CompletableFuture.runAsync`**|**`ExecutorService.submit`**|
+|---|---|---|
+|**异常传播**|需手动调用 `.exceptionally()` 处理|直接抛出异常（需线程池配置异常处理器）|
+|**线程池灵活性**|可动态指定不同线程池|需提前初始化固定线程池|
+|**组合操作**|支持链式调用（如 `.thenRun()`）|仅支持单一任务提交|
+|**代码简洁性**|更函数式风格|传统命令式风格|
+|**适用场景**|需要后续异步编排的场景（如多任务依赖）|简单异步任务（无需结果或后续操作）|
+
+---
+
+#### 4. **如何选择？**
+
+##### ✅ **优先选择 `CompletableFuture.runAsync` 当：**
+
+- 需要与其他异步任务组合（如并行查询多个缓存后合并结果）。
+    
+- 项目已使用 Java 8+ 函数式编程风格。
+    
+- 需要更灵活的线程池管理（如不同任务用不同线程池）。
+    
+
+##### ✅ **优先选择 `ExecutorService.submit` 当：**
+
+- 需要直接控制线程池行为（如自定义拒绝策略）。
+    
+- 代码运行在旧版 Java（< 8）环境中。
+    
+- 任务简单且无需后续异步编排。
+    
+---
+
+#### 5. **完整最佳实践示例**
+
+##### 🌟 **改进后的 `CompletableFuture` 实现（带异常处理）**
+
+```java
+CompletableFuture.runAsync(() -> {
+    try {
+        rebuildCache(id);
+    } catch (Exception e) {
+        log.error("缓存重建失败, id: {}", id, e);
+    } finally {
+        unlock(lockKey);
+    }
+}, executor).exceptionally(e -> {
+    log.error("异步任务异常", e);
+    return null;
+});
+```
+
+##### 🌟 **改进后的 `ExecutorService` 实现（带线程池监控）**
+
+```java
+Future<?> future = CACHE_REBUILD_EXECUTOR.submit(() -> {
+    try {
+        this.saveShop2Redis(id, 20L);
+    } finally {
+        unlock(lockKey);
+    }
+});
+
+// 可选：监控任务状态
+if (future.isDone()) {
+    try {
+        future.get(); // 检查是否抛出异常
+    } catch (InterruptedException | ExecutionException e) {
+        log.error("缓存重建任务异常", e);
+    }
+}
+```
+
+---
+
+#### 6. **底层原理对比**
+
+|**机制**|**`CompletableFuture`**|**`ExecutorService`**|
+|---|---|---|
+|**任务调度**|通过 `ForkJoinPool` 或自定义线程池执行|直接由配置的线程池执行|
+|**异常捕获**|依赖 `CompletionStage` 的回调处理|依赖 `Future.get()` 或线程池的异常处理器|
+|**资源消耗**|默认共享 `commonPool`，可能竞争资源|独立线程池，隔离性好|
