--- a/JAVA/点评.md
+++ b/JAVA/点评.md
@@ -106,7 +106,7 @@ redis可能出现的问题：big key问题，分页，排序，oom
 2. 手机格式错误之后，验证码发送按钮依旧设置60s后重发，没有进行重置
 	1. 需求：报出手机格式错误之后，可以缓冲几秒之后，验证码按钮进行重置
 
-## 商户查询缓存
+## 商户查询==缓存==
 ### 业务逻辑
 1. 查询是否存在于redis缓存中stringRedisTemplate   get
 2. 存在(redis缓存命中），转成java对象(JSONUtil.toBean，JSONUtil.toList)返回
@@ -263,15 +263,105 @@ redis可能出现的问题：big key问题，分页，排序，oom
 		    - ![[Pasted image 20250718154859.png]]
 	    - 逻辑过期：无需等待，性能较好，。不保证一致性，实现复杂，有额外内存消耗
 		    - ![[Pasted image 20250718155100.png]]
-## 优惠券秒杀
+## 优惠券==秒杀==
 ### 全局ID生成器
 分布式系统下生成全局唯一ID：唯一性，递增性，安全性，高可用，高性能
 组成：符号位（1bit），时间戳（31bit），序列号（32bit）
-## 分布式锁
-## 秒杀优化
-## 消息队列
-## 达人探店
-## 好友关注
+### 超卖问题
+1. 悲观锁：认为线程安全问题一定会发生,因此在操作数据之前先获取锁,确保线程串行执行。例如Synchronized、Lock都属于悲观锁
+	1. 添加同步锁，让线程串行执行。简单粗暴，性能一般
+2. 乐观锁：认为线程安全问题不一定会发生,因此不加锁,只是在更新数据时去判断有没有其它线程对数据做了修改。如果没有修改则认为是安全的,自己才更新数据。 如果已经被其它线程修改说明发生了安全问题,此时可以重试或异常。
+	1. 版本号法：查询库存和版本号，判断库存大于0之后，判断有没有修改过，未修改进行扣减，修改过不执行扣减，
+	2. CAS法：判断之前查询得到的数据是否又被修改过，库存大于0就可以执行
+### 一人一单
+1. 逻辑：判断库存充足之后，根据优惠券ID和用户ID查询订单，判断订单是否存在，存在返回异常，不存在扣减库存
+#### 问题
+1. 加悲观锁`synchronized(userId.toString().intern())`
+	1. 使用 `synchronized` 对 **字符串池中的 `userId` 字符串对象** 加锁，目的是实现 **基于用户ID的细粒度锁**，确保同一用户的请求串行执行，不同用户的请求并行执行。
+	2. 使用intern：
+		1. 保证锁对象的唯一性：不同线程即使生成不同 `String` 对象（如 `new String("123")`），`intern()` 后获取的是同一个锁对象。
+		2. 避免锁失效：直接 `synchronized(userId.toString())` 会因不同 `String` 对象导致锁无效。
+2. **事务失效**
+	1.　**自调用问题**：类内部方法调用（如A方法调用B方法），即使B方法有@Transactional，也不会通过代理生效。  
+		==解决==：通过AopContext.currentProxy()获取代理对象调用。
+		```java
+		类 proxy = （强转）AopContext.currentProxy();
+		return proxy.函数（参数）;
+		IVoucherOrderService proxy = (IVoucherOrderService) AopContext.currentProxy();
+            return proxy.createVoucherOrder(voucherId);
+        //pom添加依赖
+        <dependency>  
+		    <groupId>org.aspectj</groupId>  
+		    <artifactId>aspectjweaver</artifactId>  
+		</dependency>
+        //application添加注释
+        @EnableAspectJAutoProxy(proxyTargetClass = true)
+		```
+3. 并发安全问题
+### 分布式锁
+分布式锁：分布式系统或集群模式下**多进程可见**并且**互斥**的锁，高可用，高并发，高性能，安全性
+	![[Pasted image 20250719182810.png]]
+1. 基于Redis的分布式锁
+	1. 获取锁：
+		1. 互斥：确保只能有一个线程获取锁 SET lock thread1 NX(互斥) EX(设置超时时间) 10
+		2. 非阻塞：尝试一次，成功返回true，失败返回false
+	2. 释放锁：手动释放，超时释放：获取锁时添加一个超时时间DEL key
+	3. 问题和优化：
+		1. 线程1在释放锁的时候把线程2的锁删了![[Pasted image 20250719194429.png]]
+			1. 解决：判断锁是否是自己的。在获取锁时存入线程标示
+		2. jvm垃圾回收时触发STW事件，发生阻塞
+			1. ![[Pasted image 20250719200458.png]]
+			2. 解决：使用lua脚本实现分布式锁的释放锁逻辑，保证原子性
+		3. 不可重入：同一个线程无法多次获取同一把锁。redisson
+		4. 不可重试：获取锁只尝试一次就返回false，没有重试机制
+		5. 超时释放：锁超时释放虽然可以避免死锁但如果是业务执行耗时较长，也会导致所释放，存在安全隐患
+		6. 主从一致性：如果Redis提供主从集群，主从同步存在延迟，当主宕机时，如果从并同步主中的锁数据，就会出现锁实现
+2. Redisson分布式锁：
+	1. 可重入（利用hash结构记录线程id和重入次数），
+	2. 可重试（利用信号量和PubSub功能实现等待，唤醒，获取锁失败的重试机制），
+	3. 超时续约（利用WatchDog，每隔一段时间（ReleaseTime/3），重置超时时间
+	4. ![[Pasted image 20250719212958.png]]
+	5. 主从一致性：multiLock。多个独立Redis节点，所有节点获取重入锁才算获取锁成功
+### 秒杀优化
+##### 需求
+1. 新增秒杀优惠券的同时，将优惠券信息保存到Redis中
+2. 基于lua脚本，判断秒杀库存，一人一单，决定用户是否抢购成功
+3. 如果抢购成功，将优惠券id和用户id封装后存入阻塞队列
+4. 开启线程任务，不断从阻塞队列中获取信息，实现异步下单功能
+5. 问题：
+	1. 内存限制问题：高并发情况下，大量信息进入阻塞队列，超出队列上限，可能导致内存溢出
+	2. 数据安全问题：（数据丢失
+库存String：key(优惠券id：stock:vid:7) value(库存：100)
+一人一单SET：key（order:vid:7）value（1,2,3,4,8）
+![[Pasted image 20250721100723.png]]
+### 消息队列
+1. 消息队列   三个角色
+	- 生产者：发送消息到消息队列
+	- 消息队列：存储和管理消息，为消息代理
+	- 消费者：从消息队列获取消息并处理消息
+2. redis提供三种不同 的方式实现消息队列
+	1. list结构：BLPOP，
+	2. PubSub：点对点。PUBLISH，SUBSCRIBE。支持一条消息发给多个消费者。不支持数据持久化，无法避免消息丢失，消息堆积有上限，超出时数据丢失。
+	3. Stream：redis5.0引入的新的数据类型。单消费模式。有漏读风险 
+		![[Pasted image 20250721152728.png]]
+		![[Pasted image 20250721152916.png]]
+		- 消费者组：将多个消费者划分到一个组中，监听同一个队列
+			- 消息分流：队列中的消息会分流给组内的不同消费者,而不是重复消费,从而加快消息处理的速度
+			- 消息标示：消费者组会维护一个标示,记录最后一个被处理的消息,哪怕消费者宕机重启,还会从标示之后读取消息。确保每一个消息都会被消费
+			- 消息确认：消费者获取消息后,消息处于pending状态,并存入一个pending-list。当处理完成后需要通过XACK来确认消息,标记消息为已处理,才会从pending-list移除。
+			- 创建![[Pasted image 20250721153828.png]]
+			- 读取![[Pasted image 20250721154047.png]]
+			- ![[Pasted image 20250721154810.png]]
+- 需求
+	1. 创建Stream类型的消息队列，stream.orders
+	2. 修改之前的秒杀下单lua脚本，在认定有抢购资格后，之间向stream.orders中添加消息，包含voucherId，userId，orderId
+	3. 项目启动时开启线程任务，尝试获取stream.orders中的信息，完成下单
+## 发布笔记 点赞 关注
+#### 点赞
+- 给blog类中添加一个isLike字段，标示是否被当前用户点赞
+- 修改点赞功能，利用redis的set集合判断是否点赞过，未点赞加1，已点赞则减一
+- 根据id查询
+#### 好友关注
 ## 附近商铺
 ## 用户签到
 ## UV统计
