--- a/JAVA/点评.md
+++ b/JAVA/点评.md
@@ -236,11 +236,11 @@ redis可能出现的问题：big key问题，分页，排序，oom
 	3. 主动更新：编写业务逻辑，一致性好，维护成本高。高一致性需求，以超时剔除作为兜底方案
 		1. cache aside pattern：更新数据库的同时更新缓存。
 			1. 删除缓存，保证数据库与缓存操作的原子性
-				![[Pasted image 20250718140718.png]]
+				![Pasted image 20250718140718](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250718140718.png)
 			2. 先删除缓存，再操作数据库
-				![[Pasted image 20250718140831.png]]![[Pasted image 20250718140900.png]]
+				![Pasted image 20250718140831](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250718140831.png)![Pasted image 20250718140900](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250718140900.png)
 			3. 先操作数据库，再删除缓存
-				![[Pasted image 20250718140931.png]]![[Pasted image 20250718141053.png]]
+				![Pasted image 20250718140931](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250718140931.png)![Pasted image 20250718141053](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250718141053.png)
 		2. Read/write through pattern：缓存和数据库整合为一个服务，由服务来维护一致性。
 		3. write behind caching pattern：增删改查在数据库中做，由其他线程异步将缓存数据持久化到数据库，保证最终一致
 4. 常见问题和解决方案
@@ -260,9 +260,9 @@ redis可能出现的问题：big key问题，分页，排序，oom
 		- 做好热点参数的限流
 	3. **缓存击穿**：热点key问题，一个被高并发访问并且缓存重建业务较复杂的key突然失效，无数请求访问会在瞬间给数据库带来巨大冲击
 	    - 使用互斥锁（Redis 的 SETNX 命令）：没有额外的内存消耗。线程需要等待，性能受影响，可能有死锁风险
-		    - ![[Pasted image 20250718154859.png]]
+		    - ![Pasted image 20250718154859](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250718154859.png)
 	    - 逻辑过期：无需等待，性能较好，。不保证一致性，实现复杂，有额外内存消耗
-		    - ![[Pasted image 20250718155100.png]]
+		    - ![Pasted image 20250718155100](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250718155100.png)
 ## 优惠券==秒杀==
 ### 全局ID生成器
 分布式系统下生成全局唯一ID：唯一性，递增性，安全性，高可用，高性能
@@ -300,17 +300,17 @@ redis可能出现的问题：big key问题，分页，排序，oom
 3. 并发安全问题
 ### 分布式锁
 分布式锁：分布式系统或集群模式下**多进程可见**并且**互斥**的锁，高可用，高并发，高性能，安全性
-	![[Pasted image 20250719182810.png]]
+	![Pasted image 20250719182810](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250719182810.png)
 1. 基于Redis的分布式锁
 	1. 获取锁：
 		1. 互斥：确保只能有一个线程获取锁 SET lock thread1 NX(互斥) EX(设置超时时间) 10
 		2. 非阻塞：尝试一次，成功返回true，失败返回false
 	2. 释放锁：手动释放，超时释放：获取锁时添加一个超时时间DEL key
 	3. 问题和优化：
-		1. 线程1在释放锁的时候把线程2的锁删了![[Pasted image 20250719194429.png]]
+		1. 线程1在释放锁的时候把线程2的锁删了![Pasted image 20250719194429](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250719194429.png)
 			1. 解决：判断锁是否是自己的。在获取锁时存入线程标示
 		2. jvm垃圾回收时触发STW事件，发生阻塞
-			1. ![[Pasted image 20250719200458.png]]
+			1. ![Pasted image 20250719200458](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250719200458.png)
 			2. 解决：使用lua脚本实现分布式锁的释放锁逻辑，保证原子性
 		3. 不可重入：同一个线程无法多次获取同一把锁。redisson
 		4. 不可重试：获取锁只尝试一次就返回false，没有重试机制
@@ -320,7 +320,7 @@ redis可能出现的问题：big key问题，分页，排序，oom
 	1. 可重入（利用hash结构记录线程id和重入次数），
 	2. 可重试（利用信号量和PubSub功能实现等待，唤醒，获取锁失败的重试机制），
 	3. 超时续约（利用WatchDog，每隔一段时间（ReleaseTime/3），重置超时时间
-	4. ![[Pasted image 20250719212958.png]]
+	4. ![Pasted image 20250719212958](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250719212958.png)
 	5. 主从一致性：multiLock。多个独立Redis节点，所有节点获取重入锁才算获取锁成功
 ### 秒杀优化
 ##### 需求
@@ -333,7 +333,7 @@ redis可能出现的问题：big key问题，分页，排序，oom
 	2. 数据安全问题：（数据丢失
 库存String：key(优惠券id：stock:vid:7) value(库存：100)
 一人一单SET：key（order:vid:7）value（1,2,3,4,8）
-![[Pasted image 20250721100723.png]]
+![Pasted image 20250721100723](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250721100723.png)
 ### 消息队列
 1. 消息队列   三个角色
 	- 生产者：发送消息到消息队列
@@ -343,15 +343,15 @@ redis可能出现的问题：big key问题，分页，排序，oom
 	1. list结构：BLPOP，
 	2. PubSub：点对点。PUBLISH，SUBSCRIBE。支持一条消息发给多个消费者。不支持数据持久化，无法避免消息丢失，消息堆积有上限，超出时数据丢失。
 	3. Stream：redis5.0引入的新的数据类型。单消费模式。有漏读风险 
-		![[Pasted image 20250721152728.png]]
-		![[Pasted image 20250721152916.png]]
+		![Pasted image 20250721152728](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250721152728.png)
+		![Pasted image 20250721152916](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250721152916.png)
 		- 消费者组：将多个消费者划分到一个组中，监听同一个队列
 			- 消息分流：队列中的消息会分流给组内的不同消费者,而不是重复消费,从而加快消息处理的速度
 			- 消息标示：消费者组会维护一个标示,记录最后一个被处理的消息,哪怕消费者宕机重启,还会从标示之后读取消息。确保每一个消息都会被消费
 			- 消息确认：消费者获取消息后,消息处于pending状态,并存入一个pending-list。当处理完成后需要通过XACK来确认消息,标记消息为已处理,才会从pending-list移除。
-			- 创建![[Pasted image 20250721153828.png]]
-			- 读取![[Pasted image 20250721154047.png]]
-			- ![[Pasted image 20250721154810.png]]
+			- 创建![Pasted image 20250721153828](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250721153828.png)
+			- 读取![Pasted image 20250721154047](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250721154047.png)
+			- ![Pasted image 20250721154810](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/Pasted%20image%2020250721154810.png)
 - 需求
 	1. 创建Stream类型的消息队列，stream.orders
 	2. 修改之前的秒杀下单lua脚本，在认定有抢购资格后，之间向stream.orders中添加消息，包含voucherId，userId，orderId
