--- a/JAVA/点评.md
+++ b/JAVA/点评.md
@@ -1,5 +1,7 @@
 ## Redis
-开源的、高性能的 **键值存储系统**（Key-Value Store），通常被用作数据库、缓存或消息中间件。
+开源的、高性能的 **键值存储系统**（Key-Value Store），通常被用作数据库、缓存或消息中间件。**单线程**
+基于内存的数据库，对数据的读写操作都在内存中完成，因此读写速度非常快，用于缓存、消息队列、分布式锁等场景。
+
 ### redis指令
 进入redis安装目录：cd /usr/local/src/redis-7.2.6
 **以 `redis` 用户运行 Redis**（推荐）：sudo -u redis redis-server redis.conf
@@ -202,6 +204,49 @@ AOF和RDB对比
 	3. 将故障节点标记为slave，发送`slaveof 地址 新的节点端口`命令，恢复后自动成为新的master的slave节点
 ### Redis分片集群
 ## 多级缓存
+OpenResty
+缓存预热：初始化缓存（查询信息，放入缓存） implements InitializingBean
+canal客户端
+
+- bigkey的危害
+	- 网络阻塞：对BigKey执行读请求时，少量QPS就可能导致带宽使用率被占满，导致redis实例及所在物理机变慢
+	- 数据倾斜：BigKey所在的redis实例内存使用率远超其他实例，无法使数据分片的内存资源达到均衡
+	- redis阻塞：对元素较多的hash、list、zset等做运算会耗时较久，使主线程被阻塞
+	- CPU压力：对BigKey的数据序列化和反序列化会导致CPU的使用率飙升，影响redis实例和本机其他应用
+
+pipeline
+集群下的批处理
+	并行slot：在客户端计算每个key的slot，将slot一致分为一组，每组都利用pipeline批处理。并行执行各组命令。1次网络耗时+n次命令耗时。耗时短，实现复杂
+	hash_tag：一次网络耗时+n次命令耗时。容易出现数据倾斜
+
+持久化配置
+	分布锁、库存、订单流水：开启持久化功能（AOF）
+	1. 用来做缓存的redis实例尽量不开启持久化
+	2. 关闭RDB持久化功能，使用AOF
+	3. 利用脚本定期在slave节点做RDB，实现数据备份
+	AOF文件体积较大，会频繁做bg rewrite对文件重写，这种操作对CPU的压力很大，需要去计算哪些命令需要去重写，重写过程也需要大量的磁盘IO。对CPU和磁盘有较高的要求
+	4. 设置合理的rewrite阈值，避免频繁的bgrewrite
+	5. 禁止在rewrite期间做aof，避免因aof引起的阻塞
+	![image.png](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/20250725214233518.png)
+
+
+慢查询：在redis执行时耗时超时某个阈值的命令
+	![image.png](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/20250725214802742.png)
+
+ 
+redis 安全漏洞
+原因：redis未设置密码，利用redis的config set命令动态修改redis配置；使用了root账号权限启动redis
+![image.png](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/20250725215714930.png)
+内存配置
+内存不足可能导致key被频繁删除。响应时间变长，QPS不稳定等问题。
+数据内存、进程内存、缓冲区内存
+![image.png](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/20250725215951255.png)
+客户端缓冲区：输入缓冲区最大1G，输出缓冲区可以设置 。
+
+![image.png](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/20250725221433784.png)
+![image.png](https://kmk1132-obs-1370539359.cos.ap-guangzhou.myqcloud.com/20250725221949183.png)
+
+
 # 点评实战
 ## 短信登录验证
 1. 登录有效期问题，
